@@ -391,8 +391,10 @@ the child learns to walk.
 PRAYER_CLEANLINESS=<ABILITY>\
 Usage    : PRAY "CLEANLINESS" [TARGET NAME]\n\r\
 Example  : pray "cleanliness" bob\n\r\
+Example  : pray "cleanliness" baby girl\n\r\
+Example  : pray "cleanliness" here\n\r\
 Brings the target closer to divinity by removing dirt, grime, and stink from \
-the target player.
+the target mob, baby, item, or room.
 
 PRAYER_CONDEMNATION=<ABILITY>\
 Usage    : PRAY CONDEMNATION [TARGET NAME]\n\r\
