@@ -2122,6 +2122,13 @@ Usage    : CAST "PRAYER SHIELD" [TARGET NAME] \n\r\
 Example  : cast "prayer shield" bob\n\r\
 This spell allows the target to become almost immune to Clerical prayers.
 
+PRESTIDIGITATION=SPELL_PRESTIDIGITATION
+SPELL_PRESTIDIGITATION=<ABILITY>\
+Usage    : CAST "PRESTIDIGITATION" [EFFECT]\n\r\
+Example  : cast "prestidigitation" cast(s) a powerful spell\n\r\
+This spell allows the caster to cast an illusory spell, or perform \
+a magical illusory action.  
+
 SPELL_PRODUCEFLAME=SPELL_PRODUCE_FLAME
 SPELL_PRODUCE_FLAME=<ABILITY>\
 Usage    : CAST PRODUCE FLAME\n\r\
