@@ -12,6 +12,7 @@
   11. Private property left untampered for mud-months will get increasingly "Dusty". Use CLEAN.
   12. Channel backlogs can now be managed from the Journal Browser in the MUDGrinder
   13. New Achievement Award: NOPURGE -- for protecting players from auto-purge.
+  14. New Spell: Prestidigitation
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
